# lib-json

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  makefile  test.py
include/: json.h
include/internal/: parse.h
src/: main.c  parse_numbers.c
